--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
             <h2 class="text-3xl md:text-4xl font-bold mb-12 text-center bg-gradient-to-r from-red-500 to-red-600 bg-clip-text text-transparent">Kata Mereka</h2>
             <div class="flex flex-col md:flex-row justify-center gap-8">
                 <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
-                    <p class="text-neutral-300 italic">"Bergabung dengan HIMATIF adalah keputusan terbaik saya. Saya belajar banyak tentang kerja tim dan manajemen waktu yang tidak saya dapatkan di kelas."</p>
-                    <p class="mt-4 font-bold text-red-500">- Aulia Rahman, Anggota 2024</p>
+                    <p class="text-neutral-300 italic">"Himatif adalah wadah pengembangan kreatifitas dan kedisiplinan. Saya telah banyak berkembang didalamnya."</p>
+                    <p class="mt-4 font-bold text-red-500">- Alamsyah, Anggota 2023</p>
                 </div>
-                <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
+                <!-- <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
                     <p class="text-neutral-300 italic">"Jaringan pertemanan dan koneksi ke alumni sangat luas. Sangat membantu saya dalam mempersiapkan karir setelah lulus."</p>
                     <p class="mt-4 font-bold text-red-500">- Citra Dewi, Anggota 2023</p>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
