--- a/form.html
+++ b/form.html
@@ -9,140 +9,118 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <style>
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
-      }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
 
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+        body {
+            background-color: #000000;
+            background-image: radial-gradient(circle at 1px 1px, rgba(255, 255, 255, 0.05) 1px, transparent 0);
+            background-size: 2rem 2rem;
+        }
 
-    .content-fade {
-      animation: fadeIn 0.5s ease-out forwards;
-    }
-  </style>
+        .content-fade {
+            animation: fadeIn 0.5s ease-out forwards;
+        }
+    </style>
 </head>
 
-<body class="bg-gray-900 text-gray-200 flex min-h-screen">
+<body class="bg-black text-neutral-200 flex min-h-screen font-sans">
 
-  <aside class="w-20 hover:w-64 bg-gray-800 p-4 flex flex-col shadow-lg transition-all duration-300 ease-in-out group">
-    <div class="flex items-center gap-3 mb-10 h-10">
-      <i class="fa-solid fa-layer-group fa-2x text-red-500 min-w-[32px] text-center"></i>
-      <span
-        class="font-bold text-xl text-red-500 opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">HIMATIF</span>
-    </div>
+  <aside class="w-20 hover:w-64 bg-neutral-950 p-4 flex flex-col shadow-lg transition-all duration-300 ease-in-out group border-r border-neutral-800">
+        <div class="flex items-center gap-3 mb-10 h-10">
+            <i class="fa-solid fa-layer-group fa-2x text-red-500 min-w-[32px] text-center"></i>
+            <span class="font-bold text-xl bg-gradient-to-r from-red-500 to-red-600 bg-clip-text text-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">HIMATIF</span>
+        </div>
 
-    <div class="flex flex-col justify-between flex-1">
-      <nav class="flex flex-col gap-4">
-        <a href="user.html" class="flex items-center gap-3 px-2 py-2 text-white bg-red-600 rounded-lg h-12">
-          <i class="fa-solid fa-house fa-fw fa-lg min-w-[32px] text-center"></i>
-          <span
-            class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Home</span>
-        </a>
-        <a href="profile.html"
-          class="flex items-center gap-3 px-2 py-2 text-gray-400 hover:bg-gray-700 hover:text-white rounded-lg h-12">
-          <i class="fa-solid fa-user fa-fw fa-lg min-w-[32px] text-center"></i>
-          <span
-            class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Profil</span>
-        </a>
-        <a href="form.html"
-          class="flex items-center gap-3 px-2 py-2 text-gray-400 hover:bg-gray-700 hover:text-white rounded-lg h-12">
-          <i class="fa-solid fa-file-lines fa-fw fa-lg min-w-[32px] text-center"></i>
-          <span
-            class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Form
-            Pendaftaran</span>
-        </a>
-      </nav>
+        <div class="flex flex-col justify-between flex-1">
+            <nav class="flex flex-col gap-4">
+                <a href="user.html" class="flex items-center gap-3 px-2 py-2 text-neutral-400 hover:bg-neutral-800 hover:text-white rounded-lg h-12">
+                    <i class="fa-solid fa-house fa-fw fa-lg min-w-[32px] text-center"></i>
+                    <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Home</span>
+                </a>
+                <a href="profile.html" class="flex items-center gap-3 px-2 py-2 text-neutral-400 hover:bg-neutral-800 hover:text-white rounded-lg h-12">
+                    <i class="fa-solid fa-user fa-fw fa-lg min-w-[32px] text-center"></i>
+                    <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Profil</span>
+                </a>
+                <a href="form.html" class="flex items-center gap-3 px-2 py-2 text-white bg-gradient-to-r from-red-600 to-red-800 rounded-lg h-12 shadow-md shadow-red-500/20">
+                    <i class="fa-solid fa-file-lines fa-fw fa-lg min-w-[32px] text-center"></i>
+                    <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Form Pendaftaran</span>
+                </a>
+            </nav>
 
-      <div>
-        <button onclick="logout()"
-          class="w-full flex items-center gap-3 px-2 py-2 text-gray-400 hover:bg-red-800 hover:text-white rounded-lg h-12">
-          <i class="fa-solid fa-right-from-bracket fa-fw fa-lg min-w-[32px] text-center"></i>
-          <span
-            class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Log
-            Out</span>
-        </button>
-      </div>
-    </div>
-  </aside>
+            <div>
+                <button onclick="logout()" 
+                    class="w-full flex items-center gap-3 px-2 py-2 text-neutral-400 hover:bg-red-900/50 hover:text-white rounded-lg h-12">
+                    <i class="fa-solid fa-right-from-bracket fa-fw fa-lg min-w-[32px] text-center"></i>
+                    <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Log Out</span>
+                </button>
+            </div>
+        </div>
+    </aside>
 
   <main class="flex-1 p-8 content-fade">
-    <button id="menu-toggle" class="lg:hidden mb-4 text-gray-300 hover:text-white">
-      <!-- <i class="fa-solid fa-bars fa-lg"></i> -->
-    </button>
-
     <div class="max-w-3xl mx-auto">
-      <h1 class="text-3xl font-bold text-red-500 mb-6">Formulir Pendaftaran Himpunan</h1>
+            <h1 class="text-4xl font-bold bg-gradient-to-r from-red-500 to-red-600 bg-clip-text text-transparent mb-8">Formulir Pendaftaran Himpunan</h1>
 
-      <div class="bg-gray-800 p-8 rounded-lg border border-gray-700">
-        <form id="submissionForm" class="space-y-6">
+            <div class="bg-neutral-900 p-8 rounded-xl border border-neutral-800">
+                <form id="submissionForm" class="space-y-6">
 
-          <div class="grid grid-cols-1 md:grid-cols-2 md:gap-x-6">
-              <div>
-                  <label for="division1" class="block mb-2 font-medium text-gray-300">Pilihan Divisi 1 (Prioritas)</label>
-                  <select id="division1" name="division1" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
-                      <option value="Minat dan Bakat">Departemen Minat dan Bakat</option>
-                      <option value="Kaderisasi">Departemen Kaderisasi</option>
-                      <option value="Hubungan Masyarakat">Departemen Hubungan Masyarakat</option>
-                      <option value="Multimedia">Departemen Multimedia</option>
-                      <option value="Akademik">Departemen Akademik</option>
-                      <option value="Kepelatihan">Departemen Kepelatihan</option>
-                  </select>
-              </div>
-              <div>
-                  <label for="division2" class="block mb-2 font-medium text-gray-300">Pilihan Divisi 2</label>
-                  <select id="division2" name="division2" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
-                      <option value="Minat dan Bakat">Departemen Minat dan Bakat</option>
-                      <option value="Kaderisasi">Departemen Kaderisasi</option>
-                      <option value="Hubungan Masyarakat">Departemen Hubungan Masyarakat</option>
-                      <option value="Multimedia">Departemen Multimedia</option>
-                      <option value="Akademik">Departemen Akademik</option>
-                      <option value="Kepelatihan">Departemen Kepelatihan</option>
-                  </select>
-              </div>
-          </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div>
+                            <label for="division1" class="block mb-2 font-medium text-neutral-300">Pilihan Divisi 1 (Prioritas)</label>
+                            <select id="division1" name="division1" class="w-full px-4 py-3 border border-neutral-700 bg-neutral-900 text-neutral-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500 transition-all">
+                                <option value="Minat dan Bakat">Departemen Minat dan Bakat</option>
+                                <option value="Kaderisasi">Departemen Kaderisasi</option>
+                                <option value="Hubungan Masyarakat">Departemen Hubungan Masyarakat</option>
+                                <option value="Multimedia">Departemen Multimedia</option>
+                                <option value="Akademik">Departemen Akademik</option>
+                                <option value="Kepelatihan">Departemen Kepelatihan</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label for="division2" class="block mb-2 font-medium text-neutral-300">Pilihan Divisi 2</label>
+                            <select id="division2" name="division2" class="w-full px-4 py-3 border border-neutral-700 bg-neutral-900 text-neutral-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500 transition-all">
+                                <option value="Minat dan Bakat">Departemen Minat dan Bakat</option>
+                                <option value="Kaderisasi">Departemen Kaderisasi</option>
+                                <option value="Hubungan Masyarakat">Departemen Hubungan Masyarakat</option>
+                                <option value="Multimedia">Departemen Multimedia</option>
+                                <option value="Akademik">Departemen Akademik</option>
+                                <option value="Kepelatihan">Departemen Kepelatihan</option>
+                            </select>
+                        </div>
+                    </div>
 
-          <div>
-            <label for="motivation" class="block mb-2 font-medium text-gray-300">Motivasi Bergabung</label>
-            <textarea id="motivation" name="motivation" rows="5"
-              class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500"
-              placeholder="Jelaskan alasan Anda ingin bergabung..." required></textarea>
-          </div>
+                    <div>
+                        <label for="motivation" class="block mb-2 font-medium text-neutral-300">Motivasi Bergabung</label>
+                        <textarea id="motivation" name="motivation" rows="5" class="w-full px-4 py-3 border border-neutral-700 bg-neutral-900 text-neutral-200 rounded-lg placeholder:text-neutral-500 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500 transition-all" placeholder="Jelaskan alasan Anda ingin bergabung..." required></textarea>
+                    </div>
 
-          <div>
-            <label for="vision_mission" class="block mb-2 font-medium text-gray-300">Visi & Misi Masuk Divisi</label>
-            <textarea id="vision_mission" name="vision_mission" rows="5"
-              class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500"
-              placeholder="Jelaskan visi dan misi Anda untuk divisi yang dipilih..." required></textarea>
-          </div>
+                    <div>
+                        <label for="vision_mission" class="block mb-2 font-medium text-neutral-300">Visi & Misi Masuk Divisi</label>
+                        <textarea id="vision_mission" name="vision_mission" rows="5" class="w-full px-4 py-3 border border-neutral-700 bg-neutral-900 text-neutral-200 rounded-lg placeholder:text-neutral-500 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500 transition-all" placeholder="Jelaskan visi dan misi Anda untuk divisi yang dipilih..." required></textarea>
+                    </div>
 
-          <div>
-            <label for="cv" class="block mb-2 font-medium text-gray-300">Upload CV* (PDF, max 2MB)</label>
-            <input type="file" id="cv" name="cv" accept=".pdf"
-              class="w-full text-gray-300 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:font-semibold file:bg-red-600 file:text-white hover:file:bg-red-700"
-              required>
-          </div>
+                    <div>
+                        <label for="cv" class="block mb-2 font-medium text-neutral-300">Upload CV* (PDF, max 2MB)</label>
+                        <input type="file" id="cv" name="cv" accept=".pdf" class="w-full text-neutral-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:text-white file:bg-gradient-to-r file:from-red-600 file:to-red-800 hover:file:opacity-90 file:cursor-pointer" required>
+                    </div>
 
-          <div>
-            <label for="certificate" class="block mb-2 font-medium text-gray-300">
-              Upload Sertifikat (Opsional, PDF, max 2MB)
-            </label>
-            <input type="file" id="certificate" name="certificate" accept=".pdf"
-              class="w-full text-gray-300 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:font-semibold file:bg-gray-600 file:text-white hover:file:bg-gray-500">
-          </div>
+                    <div>
+                        <label for="certificate" class="block mb-2 font-medium text-neutral-300">Upload Sertifikat (Opsional, PDF, max 2MB)</label>
+                        <input type="file" id="certificate" name="certificate" accept=".pdf" class="w-full text-neutral-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-neutral-700 file:text-neutral-200 hover:file:bg-neutral-600 file:cursor-pointer">
+                    </div>
+                    
+                    <div class="pt-4">
+                        <button type="submit" class="w-full bg-gradient-to-r from-red-600 to-red-800 text-white py-3 rounded-lg font-semibold hover:scale-105 shadow-lg shadow-red-500/20 hover:shadow-red-500/40 transition-all duration-300">
+                            Kirim Pendaftaran
+                        </button>
+                    </div>
 
-          <button type="submit"
-            class="w-full bg-red-600 text-white py-2.5 rounded-lg font-semibold hover:bg-red-700 transition-colors">
-            Kirim Pendaftaran
-          </button>
-
-        </form>
-      </div>
-    </div>
+                </form>
+            </div>
+        </div>
   </main>
 
   <script src="js/auth.js"></script>
