--- a/index.html
+++ b/index.html
@@ -131,10 +131,14 @@
                     <p class="text-neutral-300 italic">"Himatif adalah wadah pengembangan kreatifitas dan kedisiplinan. Saya telah banyak berkembang didalamnya."</p>
                     <p class="mt-4 font-bold text-red-500">- Alamsyah, Anggota 2023</p>
                 </div>
-                <!-- <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
-                    <p class="text-neutral-300 italic">"Jaringan pertemanan dan koneksi ke alumni sangat luas. Sangat membantu saya dalam mempersiapkan karir setelah lulus."</p>
-                    <p class="mt-4 font-bold text-red-500">- Citra Dewi, Anggota 2023</p>
-                </div> -->
+                <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
+                    <p class="text-neutral-300 italic">"Cara terbaik untuk melawan rasa takut adalah dengan menghadapi nya."</p>
+                    <p class="mt-4 font-bold text-red-500">- Ismi nabilah cantik imut lucu, Anggota 2024</p>
+                </div>
+                <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
+                    <a href="https://www.instagram.com/syalwalyrh/"><p class="text-neutral-300 italic">"mau coba bikin yang gini? join dulu ga sii"</p>
+                    <p class="mt-4 font-bold text-red-500">- developer, Anggota 2024</p></a>
+                </div>
             </div>
         </section>
     </main>
