penambahan fitur hapu pada admin

--- a/admin.html
+++ b/admin.html
@@ -219,6 +219,7 @@
                             <td class="p-3 font-semibold">${reg.status}</td>
                             <td class="p-3 text-center">
                                 <button onclick="showModal('${reg.id}')" class="px-3 py-1 text-sm bg-blue-600 rounded hover:bg-blue-700">Kelola</button>
+                                <button onclick="deleteRegistration('${reg.id}', '${reg.name}')" class="px-3 py-1 text-sm bg-red-600 rounded hover:bg-red-700 transition-colors ml-2">Hapus</button>
                             </td>
                         </tr>
                     `;
@@ -281,6 +282,53 @@
       }
       loadRegistrations();
     });
+
+    async function deleteRegistration(regId, regName) {
+        const result = await Swal.fire({
+            title: 'Anda Yakin?',
+            text: `Anda akan menghapus pendaftaran atas nama "${regName}". Aksi ini tidak dapat dibatalkan.`,
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#3085d6',
+            confirmButtonText: 'Ya, hapus!',
+            cancelButtonText: 'Batal',
+            background: '#1f1f1f', // Latar belakang gelap untuk SweetAlert
+            color: '#e5e5e5'      // Teks terang untuk SweetAlert
+        });
+
+        if (result.isConfirmed) {
+            try {
+                const token = getToken();
+                const response = await fetch(`http://localhost:8080/api/admin/registrations/${regId}`, {
+                    method: 'DELETE',
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (!response.ok) {
+                    const errData = await response.json();
+                    throw new Error(errData.error || 'Gagal menghapus pendaftaran.');
+                }
+
+                await Swal.fire({
+                    title: 'Dihapus!',
+                    text: 'Pendaftaran telah berhasil dihapus.',
+                    icon: 'success',
+                    background: '#1f1f1f',
+                    color: '#e5e5e5'
+                });
+                loadRegistrations(); // Muat ulang data tabel
+            } catch (error) {
+                await Swal.fire({
+                    title: 'Gagal!',
+                    text: error.message,
+                    icon: 'error',
+                    background: '#1f1f1f',
+                    color: '#e5e5e5'
+                });
+            }
+        }
+    }
   </script>
 </body>
 
