--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
         <form id="registerForm" class="space-y-4">
             <div>
                 <label class="block mb-2 font-medium text-neutral-300">Nama Lengkap</label>
-                <input type="text" name="name" class="w-full px-4 py-2.5 border border-neutral-700 bg-neutral-900 text-neutral-200 rounded-lg placeholder:text-neutral-500 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500 transition-all" placeholder="Syalwa Aliya" required>
+                <input type="text" name="name" class="w-full px-4 py-2.5 border border-neutral-700 bg-neutral-900 text-neutral-200 rounded-lg placeholder:text-neutral-500 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-red-500 transition-all" placeholder="Nama Lengkap" required>
             </div>
             <div>
                 <label class="block mb-2 font-medium text-neutral-300">NPM</label>
