--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
                 </div>
                 <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
                     <p class="text-neutral-300 italic">"Cara terbaik untuk melawan rasa takut adalah dengan menghadapi nya."</p>
-                    <p class="mt-4 font-bold text-red-500">- Ismi nabilah cantik imut lucu, Anggota 2024</p>
+                    <p class="mt-4 font-bold text-red-500">- Ismi nabilah, Anggota 2024</p>
+                </div>
+                <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
+                    <p class="text-neutral-300 italic">"sesuatu yang tidak di kerjakan akan terasa lebih ringan."</p>
+                    <p class="mt-4 font-bold text-red-500">- Bagas, Anggota 2024</p>
                 </div>
                 <div class="bg-neutral-900 p-8 rounded-xl w-full md:w-2/5 border border-neutral-800">
                     <a href="https://www.instagram.com/syalwalyrh/"><p class="text-neutral-300 italic">"mau coba bikin yang gini? join dulu ga sii"</p>
