--- a/form.html
+++ b/form.html
@@ -103,13 +103,13 @@
                     </div>
 
                     <div>
-                        <label for="cv" class="block mb-2 font-medium text-neutral-300">Upload CV* (PDF, max 2MB)</label>
-                        <input type="file" id="cv" name="cv" accept=".pdf" class="w-full text-neutral-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:text-white file:bg-gradient-to-r file:from-red-600 file:to-red-800 hover:file:opacity-90 file:cursor-pointer" required>
+                        <label for="cv" class="block mb-2 font-medium text-neutral-300">Upload CV* (PNG, max 2MB)</label>
+                        <input type="file" id="cv" name="cv" accept=".png" class="w-full text-neutral-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:text-white file:bg-gradient-to-r file:from-red-600 file:to-red-800 hover:file:opacity-90 file:cursor-pointer" required>
                     </div>
 
                     <div>
-                        <label for="certificate" class="block mb-2 font-medium text-neutral-300">Upload Sertifikat (Opsional, PDF, max 2MB)</label>
-                        <input type="file" id="certificate" name="certificate" accept=".pdf" class="w-full text-neutral-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-neutral-700 file:text-neutral-200 hover:file:bg-neutral-600 file:cursor-pointer">
+                        <label for="certificate" class="block mb-2 font-medium text-neutral-300">Upload Sertifikat (Opsional, PNG, max 2MB)</label>
+                        <input type="file" id="certificate" name="certificate" accept=".png" class="w-full text-neutral-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-neutral-700 file:text-neutral-200 hover:file:bg-neutral-600 file:cursor-pointer">
                     </div>
                     
                     <div class="pt-4">
