--- a/admin-users.html
+++ b/admin-users.html
@@ -59,6 +59,10 @@
                         class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Data
                         Pengguna</span>
                 </a>
+                <a href="admin-info.html" class="flex items-center gap-3 px-2 py-2 text-neutral-400 hover:bg-neutral-800 hover:text-white rounded-lg h-12">
+                    <i class="fa-solid fa-bullhorn fa-fw fa-lg min-w-[32px] text-center"></i>
+                    <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Kelola Informasi</span>
+                </a>
             </nav>
             <div>
                 <button onclick="logout()"
@@ -105,6 +109,10 @@
         <a href="admin-users.html" class="flex flex-col items-center justify-center w-full h-16 text-red-500">
             <i class="fa-solid fa-address-book fa-lg"></i>
             <span class="text-xs mt-1.5">Pengguna</span>
+        </a>
+        <a href="admin-info.html" class="flex flex-col items-center justify-center w-full h-16 text-neutral-400 hover:text-white">
+            <i class="fa-solid fa-bullhorn fa-lg"></i>
+            <span class="text-xs mt-1.5">Informasi</span>
         </a>
         <button onclick="logout()"
             class="flex flex-col items-center justify-center w-full h-16 text-neutral-400 hover:text-white transition-colors">
