--- a/profile.html
+++ b/profile.html
@@ -56,6 +56,10 @@
                     <span
                         class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Profil</span>
                 </a>
+                <a href="info.html" class="flex items-center gap-3 px-2 py-2 text-neutral-400 hover:bg-neutral-800 hover:text-white rounded-lg h-12">
+                    <i class="fa-solid fa-bullhorn fa-fw fa-lg min-w-[32px] text-center"></i>
+                    <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Informasi</span>
+                </a>
                 <a href="form.html"
                     class="flex items-center gap-3 px-2 py-2 text-neutral-400 hover:bg-neutral-800 hover:text-white rounded-lg h-12">
                     <i class="fa-solid fa-file-lines fa-fw fa-lg min-w-[32px] text-center"></i>
@@ -121,6 +125,10 @@
         <a href="profile.html" class="flex flex-col items-center justify-center w-full h-16 text-red-500">
             <i class="fa-solid fa-user fa-lg"></i>
             <span class="text-xs mt-1.5">Profil</span>
+        </a>
+        <a href="info.html" class="flex flex-col items-center justify-center w-full h-16 text-neutral-400 hover:text-white">
+            <i class="fa-solid fa-bullhorn fa-lg"></i>
+            <span class="text-xs mt-1.5">Informasi</span>
         </a>
         <a href="form.html" id="formBottomLink"
             class="flex flex-col items-center justify-center w-full h-16 text-neutral-400 hover:text-white transition-colors">
